<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="lives" type="id" />
    <item name="lives_text" type="id" />
    <item name="lives_layout" type="id" />
    <item name="game_layout" type="id" />
    <item name="player" type="id" />
    <item name="log" type="id" />
    <item name="player_tile" type="id" />
    <item name="points" type="id" />
    <item name="restart_button" type="id" />
    <item name="congratulatory_screen" type="id" />
    <item name="congratulationsTextView" type="id" />
    <item name="start_button" type="id" />
    <item name="score_text_view" type="id" />
</resources>