...
        android:fontFamily="@font/alata"
        android:text="Select Car:"
        android:textColor="@color/yellow"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/player_name_input"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="423dp"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/difficulty_selection_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="386dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/difficulty_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/alata"
            android:text="Easy"

            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/difficulty_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/alata"
            android:text="Medium"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/difficulty_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/alata"
            android:text="Hard"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
