...
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>

    <TextView
        android:id="@+id/player_name"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />
...
